# BrutalMLP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  brutal_mlp_benchmarks.cpp
cmake/: brutal_mlpConfig.cmake.in
docs/: API_CONTRACTS.md
examples/: xor.cpp
include/brutal_mlp/: brutal_mlp.hpp
src/: brutal_mlp.cpp
tests/: CMakeLists.txt  brutal_mlp_tests.cpp
